[gd_scene load_steps=47 format=2]

[ext_resource path="res://UI/power_up_screen/power_up_screen.png" type="Texture" id=1]
[ext_resource path="res://UI/power_up_screen/speed_power_up/sprite_00.png" type="Texture" id=2]
[ext_resource path="res://UI/power_up_screen/speed_power_up/sprite_10.png" type="Texture" id=3]
[ext_resource path="res://UI/power_up_screen/speed_power_up/sprite_04.png" type="Texture" id=4]
[ext_resource path="res://UI/power_up_screen/speed_power_up/sprite_11.png" type="Texture" id=5]
[ext_resource path="res://UI/power_up_screen/speed_power_up/sprite_09.png" type="Texture" id=6]
[ext_resource path="res://UI/power_up_screen/speed_power_up/sprite_02.png" type="Texture" id=7]
[ext_resource path="res://UI/power_up_screen/speed_power_up/sprite_05.png" type="Texture" id=8]
[ext_resource path="res://UI/power_up_screen/speed_power_up/sprite_06.png" type="Texture" id=9]
[ext_resource path="res://UI/power_up_screen/speed_power_up/sprite_03.png" type="Texture" id=10]
[ext_resource path="res://UI/power_up_screen/speed_power_up/sprite_01.png" type="Texture" id=11]
[ext_resource path="res://UI/power_up_screen/04B_30__.TTF" type="DynamicFontData" id=12]
[ext_resource path="res://UI/power_up_screen/dogicapixel.ttf" type="DynamicFontData" id=13]
[ext_resource path="res://UI/power_up_screen/speed_power_up/sprite_07.png" type="Texture" id=14]
[ext_resource path="res://UI/power_up_screen/speed_power_up/sprite_08.png" type="Texture" id=15]
[ext_resource path="res://UI/power_up_screen/attack_power_up/sprite_07.png" type="Texture" id=16]
[ext_resource path="res://UI/power_up_screen/attack_power_up/sprite_00.png" type="Texture" id=17]
[ext_resource path="res://UI/power_up_screen/attack_power_up/sprite_11.png" type="Texture" id=18]
[ext_resource path="res://UI/power_up_screen/jump_power_up/sprite_02.png" type="Texture" id=19]
[ext_resource path="res://UI/power_up_screen/attack_power_up/sprite_08.png" type="Texture" id=20]
[ext_resource path="res://UI/power_up_screen/jump_power_up/sprite_03.png" type="Texture" id=21]
[ext_resource path="res://UI/power_up_screen/attack_power_up/sprite_09.png" type="Texture" id=22]
[ext_resource path="res://UI/power_up_screen/jump_power_up/sprite_01.png" type="Texture" id=23]
[ext_resource path="res://UI/power_up_screen/jump_power_up/sprite_00.png" type="Texture" id=24]
[ext_resource path="res://UI/power_up_screen/attack_power_up/sprite_04.png" type="Texture" id=25]
[ext_resource path="res://UI/power_up_screen/attack_power_up/sprite_05.png" type="Texture" id=26]
[ext_resource path="res://UI/power_up_screen/attack_power_up/sprite_03.png" type="Texture" id=27]
[ext_resource path="res://UI/power_up_screen/attack_power_up/sprite_06.png" type="Texture" id=28]
[ext_resource path="res://UI/power_up_screen/attack_power_up/sprite_02.png" type="Texture" id=29]
[ext_resource path="res://UI/power_up_screen/attack_power_up/sprite_01.png" type="Texture" id=30]
[ext_resource path="res://UI/power_up_screen/attack_power_up/sprite_10.png" type="Texture" id=31]
[ext_resource path="res://UI/power_up_screen/jump_power_up/sprite_05.png" type="Texture" id=32]
[ext_resource path="res://UI/power_up_screen/jump_power_up/sprite_06.png" type="Texture" id=33]
[ext_resource path="res://UI/power_up_screen/jump_power_up/sprite_07.png" type="Texture" id=34]
[ext_resource path="res://UI/power_up_screen/jump_power_up/sprite_04.png" type="Texture" id=35]
[ext_resource path="res://UI/power_up_screen/jump_power_up/sprite_08.png" type="Texture" id=36]
[ext_resource path="res://UI/power_up_screen/jump_power_up/sprite_09.png" type="Texture" id=37]
[ext_resource path="res://UI/power_up_screen/power_up_screen.gd" type="Script" id=38]

[sub_resource type="Animation" id=1]
resource_name = "fade in"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "fade out"
tracks/0/type = "value"
tracks/0/path = NodePath("TextureRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="AnimatedTexture" id=3]
frames = 12
fps = 8.0
frame_0/texture = ExtResource( 17 )
frame_1/texture = ExtResource( 30 )
frame_1/delay_sec = 0.0
frame_2/texture = ExtResource( 29 )
frame_2/delay_sec = 0.0
frame_3/texture = ExtResource( 27 )
frame_3/delay_sec = 0.0
frame_4/texture = ExtResource( 25 )
frame_4/delay_sec = 0.0
frame_5/texture = ExtResource( 26 )
frame_5/delay_sec = 0.0
frame_6/texture = ExtResource( 28 )
frame_6/delay_sec = 0.0
frame_7/texture = ExtResource( 16 )
frame_7/delay_sec = 0.0
frame_8/texture = ExtResource( 20 )
frame_8/delay_sec = 0.0
frame_9/texture = ExtResource( 22 )
frame_9/delay_sec = 0.0
frame_10/texture = ExtResource( 31 )
frame_10/delay_sec = 0.0
frame_11/texture = ExtResource( 18 )
frame_11/delay_sec = 0.0

[sub_resource type="AnimatedTexture" id=4]
frames = 10
fps = 8.0
frame_0/texture = ExtResource( 24 )
frame_1/texture = ExtResource( 23 )
frame_1/delay_sec = 0.0
frame_2/texture = ExtResource( 19 )
frame_2/delay_sec = 0.0
frame_3/texture = ExtResource( 21 )
frame_3/delay_sec = 0.0
frame_4/texture = ExtResource( 35 )
frame_4/delay_sec = 0.0
frame_5/texture = ExtResource( 32 )
frame_5/delay_sec = 0.0
frame_6/texture = ExtResource( 33 )
frame_6/delay_sec = 0.0
frame_7/texture = ExtResource( 34 )
frame_7/delay_sec = 0.0
frame_8/texture = ExtResource( 36 )
frame_8/delay_sec = 0.0
frame_9/texture = ExtResource( 37 )
frame_9/delay_sec = 0.0

[sub_resource type="AnimatedTexture" id=5]
frames = 12
fps = 8.0
frame_0/texture = ExtResource( 2 )
frame_1/texture = ExtResource( 11 )
frame_1/delay_sec = 0.0
frame_2/texture = ExtResource( 7 )
frame_2/delay_sec = 0.0
frame_3/texture = ExtResource( 10 )
frame_3/delay_sec = 0.0
frame_4/texture = ExtResource( 4 )
frame_4/delay_sec = 0.0
frame_5/texture = ExtResource( 8 )
frame_5/delay_sec = 0.0
frame_6/texture = ExtResource( 9 )
frame_6/delay_sec = 0.0
frame_7/texture = ExtResource( 14 )
frame_7/delay_sec = 0.0
frame_8/texture = ExtResource( 15 )
frame_8/delay_sec = 0.0
frame_9/texture = ExtResource( 6 )
frame_9/delay_sec = 0.0
frame_10/texture = ExtResource( 3 )
frame_10/delay_sec = 0.0
frame_11/texture = ExtResource( 5 )
frame_11/delay_sec = 0.0

[sub_resource type="DynamicFont" id=6]
size = 36
extra_spacing_top = 1
extra_spacing_space = -14
font_data = ExtResource( 12 )

[sub_resource type="DynamicFont" id=7]
size = 24
extra_spacing_top = 3
extra_spacing_bottom = 4
extra_spacing_char = 2
font_data = ExtResource( 13 )

[sub_resource type="DynamicFont" id=8]
size = 17
font_data = ExtResource( 13 )

[node name="power_up_screen" type="Control"]
pause_mode = 2
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 38 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
"anims/fade in" = SubResource( 1 )
"anims/fade out" = SubResource( 2 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_top = 89
custom_constants/margin_left = 59
__meta__ = {
"_edit_use_anchors_": false
}

[node name="root" type="HBoxContainer" parent="TextureRect/MarginContainer"]
margin_left = 59.0
margin_top = 89.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 54
__meta__ = {
"_edit_use_anchors_": false
}

[node name="power_up_container" type="MarginContainer" parent="TextureRect/MarginContainer/root"]
margin_right = 315.0
margin_bottom = 511.0
custom_constants/margin_right = 155
custom_constants/margin_top = 61
custom_constants/margin_left = 160
custom_constants/margin_bottom = 169

[node name="power_up" type="MarginContainer" parent="TextureRect/MarginContainer/root/power_up_container"]
margin_left = 160.0
margin_top = 61.0
margin_right = 160.0
margin_bottom = 342.0
custom_constants/margin_right = -105
custom_constants/margin_top = -11
custom_constants/margin_left = -64
custom_constants/margin_bottom = -14

[node name="attack" type="TextureRect" parent="TextureRect/MarginContainer/root/power_up_container/power_up"]
visible = false
margin_left = -64.0
margin_top = -11.0
margin_right = 105.0
margin_bottom = 295.0
texture = SubResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="jump" type="TextureRect" parent="TextureRect/MarginContainer/root/power_up_container/power_up"]
visible = false
margin_left = -64.0
margin_top = -11.0
margin_right = 105.0
margin_bottom = 295.0
texture = SubResource( 4 )
expand = true

[node name="speed" type="TextureRect" parent="TextureRect/MarginContainer/root/power_up_container/power_up"]
visible = false
margin_left = -64.0
margin_top = -11.0
margin_right = 105.0
margin_bottom = 295.0
texture = SubResource( 5 )
expand = true

[node name="details" type="MarginContainer" parent="TextureRect/MarginContainer/root"]
margin_left = 369.0
margin_right = 965.0
margin_bottom = 511.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="details" type="VBoxContainer" parent="TextureRect/MarginContainer/root/details"]
margin_right = 596.0
margin_bottom = 511.0
custom_constants/separation = -15

[node name="Title" type="MarginContainer" parent="TextureRect/MarginContainer/root/details/details"]
margin_right = 596.0
margin_bottom = 131.0
custom_constants/margin_top = 52

[node name="power UP!" type="Label" parent="TextureRect/MarginContainer/root/details/details/Title"]
margin_top = 52.0
margin_right = 596.0
margin_bottom = 131.0
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0.756863, 0.756863, 0.764706, 1 )
text = "Power UP!
"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="description" type="MarginContainer" parent="TextureRect/MarginContainer/root/details/details"]
margin_top = 116.0
margin_right = 596.0
margin_bottom = 264.0
custom_constants/margin_right = 128
custom_constants/margin_top = 17
custom_constants/margin_left = 16
custom_constants/margin_bottom = 131

[node name="attack" type="Label" parent="TextureRect/MarginContainer/root/details/details/description"]
visible = false
margin_left = 16.0
margin_top = 17.0
margin_right = 468.0
margin_bottom = 154.0
size_flags_vertical = 1
size_flags_stretch_ratio = 14.4
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0.803922, 0.796078, 0.796078, 1 )
text = "A huge boost to your offensive power, deal two times more damage with this mana upgrade. "
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="jump" type="Label" parent="TextureRect/MarginContainer/root/details/details/description"]
visible = false
margin_left = 16.0
margin_top = 17.0
margin_right = 468.0
margin_bottom = 154.0
size_flags_vertical = 1
size_flags_stretch_ratio = 14.4
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0.803922, 0.796078, 0.796078, 1 )
text = "Using mana you manage to boost yourself up and reach higher grounds with an extra jump."
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="speed" type="Label" parent="TextureRect/MarginContainer/root/details/details/description"]
visible = false
margin_left = 16.0
margin_top = 17.0
margin_right = 468.0
margin_bottom = 126.0
size_flags_vertical = 1
size_flags_stretch_ratio = 14.4
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0.803922, 0.796078, 0.796078, 1 )
text = "Letting the mana flow throughout your body you can become a lot faster."
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="exit" type="MarginContainer" parent="TextureRect/MarginContainer/root/details/details"]
margin_top = 249.0
margin_right = 596.0
margin_bottom = 262.0
custom_constants/margin_left = 61

[node name="exit" type="Label" parent="TextureRect/MarginContainer/root/details/details/exit"]
margin_left = 61.0
margin_right = 596.0
margin_bottom = 13.0
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0.756863, 0.756863, 0.764706, 1 )
text = "Press spacebar to continue."
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
